# weevil

./: .gitignore  .ocamlformat  CITATION.cff  FUNDING.yml  LICENSE  README.md  command_aliases.sh  defaults.ml  dune  dune-project  example.tz  main.ml  model.ml  run_stepper.sh  server.ml  service_command.ml  stepper_command.ml  tezos-weevil.opam  view.ml  wcontract_helpers.ml  weevil.ml  weevil.opam  weevil_dapper.opam  weevil_idb.opam  weevil_mdb.opam  weevil_mdb_010.opam  weevil_mdb_011.opam  weevil_mdb_012.opam  weevil_mdb_013.opam  weevil_mdb_014.opam  weevil_mdb_015.opam  weevil_mdb_016.opam  wvl.ml
dapper/: dap_again.ml  (+13 more)
lib/adapter/: README.md  attach.mli  configuration_done.ml  disconnect.mli  dune  errored.ml  handler.ml  launch.ml  notes.org  service_cmdline.ml  state.ml  state.mli  state_utils.ml  threads.ml  utils.ml  variables.ml
lib/adapter/tests/adapter_expect_tests/: attach_tests.ml  configurationDone_tests.ml  dune  initialize_tests.ml  launch_tests.ml  next_tests.ml  other_tests.ml  scopes_tests.ml  stack_trace_tests.ml  threads_test.ml  variables_tests.ml
lib/adapter/tests/adapter_unit_tests/: adapter_tests.ml  dune
lib/dapper/: dap.ml  dap_base.ml  dap_config.ml  dap_config.mli  dap_dfs.ml  dap_error.ml  dap_event.ml  dap_event_message.ml  dap_event_message.mli  dap_events.mli  dap_handlers.ml  dap_header.mli  dap_initialize.ml  dap_js_msg.ml  dap_message_types.ml  dap_messages.ml  dap_render.ml  dap_render2.ml  dap_restart.ml  dap_result.ml  dap_result.mli  dap_specs.ml  dap_stack_trace.ml  dap_state.ml  dap_utils.ml  dune
lib/dapper/tests/dap_expect_tests/: dap_raise_error_response_tests.ml  dap_raise_event_tests.ml  dap_request_response_tests.ml  dune
lib/dapper/tests/dap_unit_tests/: dap_event_tests.ml  dap_response_tests.ml  dap_specs_tests.ml  dap_unit_tests.ml  dune
lib/idb/: dap_messages_new.ml  dune
src/: dap.ml  dapgen.ml  dune  flows.ml  main.ml  model.ml  server.ml  service_command.ml  stepper.ml  stepper_command.ml  view.ml  wcontract_helpers.ml
src/adapter/: attach.ml  attach.mli  attach_tests.ml  backend_io.ml  backend_io.mli  cancel.ml  config.ml  configuration.ml  configuration.mli  configuration_done.ml  configuration_done.mli  disconnect.ml  dune  handler.ml  handler.mli  handler_tests.ml  header.mli  helpers.ml  initialize.ml  initialize.mli  launch.ml  launch.mli  launch_mode.ml  next.ml  restart.ml  scopes.ml  server.ml  service_cmdline.ml  stack_trace.ml  stack_trace.mli  state.ml  state.mli  state_utils.ml  terminate.ml  threads.ml  types.ml  variables.ml
src/adapter/tests/adapter_expect_tests/: attach_tests.ml  configurationDone_tests.ml  dune  initialize_tests.ml  launch_tests.ml  next_tests.ml  scopes_tests.ml  stack_trace_tests.ml  threads_test.ml  variables_tests.ml
src/adapter/tests/adapter_unit_tests/: adapter_tests.ml  dune
src/backend/: attach.ml  cancel.ml  configuration.ml  configuration.mli  dap_handler.mli  dap_handlers.ml  dap_handlers_tests.ml  dap_server.ml  disconnect.ml  dune  full_stepper.ml  handler.ml  handler.mli  handler_t.ml  handler_tests.ml  handlers.ml  handlers.mli  handlers_tests.ml  header.ml  header.mli  initialize.ml  js_msg.ml  js_msg.mli  launch.ml  mich_server.ml  model.ml  restart.ml  restart.mli  server.ml  server2.ml  service_cmdline.ml  stepper.ml  stepper_cmdline.ml  stepper_event.ml  terminate.ml  test_utils.ml
src/dapper/: dap.ml  dap_attach.ml  dap_base.ml  dap_cmdline.ml  dap_command.mli  dap_commands.ml  dap_commands.mli  dap_config.ml  dap_config.mli  dap_configuration.ml  dap_dfs.ml  dap_disconnect.ml  dap_error.ml  dap_event.ml  dap_event.mli  dap_event_message.ml  dap_event_message.mli  dap_events.ml  dap_events.mli  dap_flow.ml  dap_flow.mli  dap_flow_exi.ml  dap_flow_tests.ml  dap_handler_t.ml  dap_handlers.ml  dap_handlers_tests.ml  dap_header.ml  dap_initialize.ml  dap_js_msg.ml  dap_js_msg.mli  dap_launch.ml  dap_launch_mode.ml  dap_message.ml  dap_message_.ml  dap_message_exi.ml  dap_message_qcheck.ml  dap_message_tests.ml  dap_message_types.ml  dap_next.ml  dap_raise_event.ml  (+31 more)
src/dapper/data/: cyclic.json  errorResponse.json  restartRequest.json  valueFormatExample.json
src/dapper_gen/: dap_autogen.ml  dap_base.ml  dap_cmdline.ml  dap_command.ml  dap_dfs.ml  dap_dfs_tests.ml  dap_encoders.ml  dap_enum.ml  dap_event.ml  dap_event.mli  dap_flow.ml  dap_message.ml  dap_playing.ml  dap_render.ml  dap_render_tests.ml  dap_response.ml  dap_schema.ml  dap_specs.ml  dap_specs_tests.ml  dap_t.ml  dap_tools.ml  dune
src/dapper_gen/data/: cancelRequest.json  emptyObject.json  largeObject.json
src/dapper_gen/old/: dap_schema.ml  dap_tools.ml
src/dapper_old/: dap_response.ml  defaults.ml  dune  model.ml  server.ml  stepper.ml
src/defaults/: dune  vals.ml
src/helpers/: dune  utop_helpers.ml
src/mdb/: dune  mdb.mli  mdb_cmdline.ml  mdb_event.ml  mdb_file_locations.ml  mdb_file_locations.mli  mdb_log_records.ml  mdb_log_records.mli  mdb_model.ml  mdb_model.mli  mdb_rpc.ml  mdb_server.ml  mdb_stepper.ml  mdb_stepper.mli  mdb_stepper2.ml  mdb_stepper2.mli  mdb_stepper2_cmdline.ml  mdb_stepper_cmdline.ml  mdb_stepper_cmdline.mli  mdb_stepper_config.ml  mdb_stepper_config.mli  mdb_stepper_config_t.ml  mdb_stepper_t.ml  mdb_stepper_t.mli  mdb_tezos.ml  mdb_tezos.mli  mdb_traced_interpreter.ml  mdb_traced_interpreter.mli  mdb_traced_interpreter_cfg.ml  mdb_traced_interpreter_cfg.mli  mdb_traced_interpreter_config.ml  mdb_traced_interpreter_config.mli  mdb_traced_interpreter_config_t.ml  mdb_traced_interpreter_t.mli  mdb_typechecker.ml  mdb_types.ml
src/mdb/old/: mdb_server.ml  server.ml  stepper.ml  stepper_cmdline.ml
src/mdb_013/: dune  mdb_import.ml  mdb_stepper.ml  mdb_traced_interpreter.ml
src/mdb_014/: dune  mdb.ml  mdb_import.ml  mdb_michelson.ml  mdb_stepper.ml  mdb_stepper_config.ml  mdb_stepper_config.mli  mdb_traced_interpreter.ml  mdb_traced_interpreter.mli  michelson.ml  stepper_config.ml  traced_interpreter.ml  traced_interpreter.mli
src/test_runner/: backend_runner_cmdline.ml  dune  main.ml
src/test_utils/: dune
src/utils/: dune  helpers.ml
(+76 files in other folders)
