(env
 (static (flags (:standard -ccopt -static))))

(executables
 (names main weevil)
  (libraries tezos-base
             tezos-base.unix
             tezos-micheline
             tezos-protocol-environment
             tezos-protocol-013-PtJakart
             tezos-client-013-PtJakart
             tezos-stdlib-unix
             tezos-013-PtJakart-test-helpers
  notty
  notty.unix
  notty.lwt
  nottui
  nottui-lwt
  mwt
 )
 (flags (:standard -linkall
          -open Tezos_base__TzPervasives
          -open Tezos_micheline
          -open Tezos_protocol_013_PtJakart
          -open Tezos_013_PtJakart_test_helpers
          -open Tezos_protocol_environment_013_PtJakart
          -open Tezos_client_013_PtJakart
          -open Tezos_stdlib_unix)))

