opam-version: "2.0"
maintainer: "simon.parry@karoshibee.com"
authors: ["Simon Parry"]
homepage: "https://TODO.com/"
bug-reports: "https://TODO/issues"
dev-repo: "git+https://TODO.git"
license: "MIT"
depends: [
  "dune" { >= "2.9" }
  "lwt"
  "tezos-base"
  "tezos-stdlib-unix"
  "tezos-014-PtKathma-test-helpers"
  "tezos-protocol-014-PtKathma"
  # "tezos-clic"
  # "tezos-012-Psithaca-test-helpers"
  # "notty"
  # "nottui"
  # "nottui-lwt"
  # "mwt"
  "data-encoding"
  "conduit"
  "conduit-lwt"
  "conduit-lwt-unix"
  "cmdliner"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos: `tezos-weevil` binary"
