opam-version: "2.0"
maintainer: "simon.parry@karoshibee.com"
authors: ["Simon Parry"]
homepage: "https://TODO.com/"
bug-reports: "https://TODO/issues"
dev-repo: "git+https://TODO.git"
license: "MIT"
depends: [
  "bisect_ppx" {dev & >= "2.5.0"}
  "dune" { >= "2.9" }
  "tezos-base"
  "tezos-stdlib-unix"
  "tezos-014-PtKathma-test-helpers"
  "tezos-protocol-014-PtKathma"
  "lwt_ppx"
  ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos: `tezos-weevil` binary"
