opam-version: "2.0"
name: "weevil"
version: "0.1.1"
synopsis: "Tezos: `weevil` binary - a tool for debugging Michelson code"
maintainer: "simon.parry@karoshibee.com"
authors: ["Simon Parry"]
homepage: "https://github.com/KaroshiBee/weevil"
bug-reports: "https://github.com/KaroshiBee/weevil/issues"
dev-repo: "git+https://github.com/KaroshiBee/weevil.git"
license: "MIT"
depends: [
  "dune" { >= "3.0" }
  "ocaml" {>= "4.14.0"}
  "cmdliner" {>= "1.1.1"}
  "tezos-base"
  "tezos-stdlib-unix"
  "tezos-rpc-http-client-unix"
  "tezos-protocol-014-PtKathma"
  "tezos-protocol-plugin-014-PtKathma"
  "tezos-client-014-PtKathma"
  "conduit-lwt-unix"
  "lwt_ppx"
  "ppx_expect" {>= "v0.15.1"}
  "ppx_deriving_qcheck" {>= "0.3.0"}
  "qcheck-alcotest" {>= "0.20"}
  "bisect_ppx" {>= "2.5.0"}
  ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
