opam-version: "2.0"
name: "weevil"
version: "0.1.1"
synopsis: "Tezos: `weevil` binary - a tool for debugging Michelson code"
maintainer: "simon.parry@karoshibee.com"
authors: ["Simon Parry"]
homepage: "https://github.com/KaroshiBee/weevil"
bug-reports: "https://github.com/KaroshiBee/weevil/issues"
dev-repo: "git+https://github.com/KaroshiBee/weevil.git"
license: "MIT"
depends: [
  "dune" { >= "3.0" }
  "ocaml" {>= "4.14.0"}
  "cmdliner" {>= "1.1.1"}
  "tezos-base" {= "15.0"}
  "tezos-stdlib-unix" {= "15.0"}
  "tezos-rpc-http-client-unix" {= "15.0"}
  "tezos-protocol-014-PtKathma" {= "15.0"}
  "tezos-protocol-plugin-014-PtKathma" {= "15.0"}
  "tezos-client-014-PtKathma" {= "15.0"}
  "conduit-lwt-unix" {>= "6.0.1"}
  "lwt_ppx" {>= "2.1.0"}
  "ppx_expect" {>= "v0.15.1"}
  "ppx_deriving_qcheck" {>= "0.3.0"}
  "qcheck-alcotest" {>= "0.20"}
  "bisect_ppx" {>= "2.5.0"}
  ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
