; (env
;  (static
;   (flags
;    (:standard -ccopt -static))))

(executables
 (names main)
 (libraries
  tezos-base
  tezos-base.unix
  tezos-micheline
  tezos-protocol-environment
  tezos-stdlib-unix
  tezos-protocol-014-PtKathma
  tezos-014-PtKathma-test-helpers
  lwt
  conduit-lwt-unix
  data-encoding
  cmdliner
  str
  dapper)
 (flags
  (:standard
   -linkall
   -open
   Tezos_protocol_014_PtKathma
   -open
   Tezos_014_PtKathma_test_helpers
 ))
)
