; (env
;  (static
;   (flags
;    (:standard -ccopt -static))))

(executables
 (names main)
 (public_names weevil)
 (modes byte native)
 (libraries
  tezos-base
  tezos-base.unix
  tezos-micheline
  tezos-protocol-environment
  tezos-stdlib-unix
  tezos-protocol-014-PtKathma
  lwt
  conduit-lwt-unix
  data-encoding
  cmdliner
  logs
  logs.cli
  dapper
  mdb
  adapter
 )
 (flags
  (:standard
   -linkall
   -open
   Tezos_protocol_014_PtKathma
 ))
 (instrumentation (backend bisect_ppx))
)
