(library
 (name dapper)
 (public_name weevil.dapper)
 (libraries
   utilities
   irmin
   lwt
   data-encoding
   cmdliner
   logs
   logs.lwt
   str
   conduit-lwt-unix
   ppx_expect
 )
 (inline_tests)
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_deriving.eq ppx_deriving_qcheck ppx_expect ppx_irmin))
 (instrumentation (backend bisect_ppx))
)
