(library
 (name adapter)
 (libraries
   dapper
   defaults
   utils ; loop_connect
   mdb ; MichEvent
   lwt
   lwt.unix
   conduit-lwt-unix
   data-encoding
   cmdliner
   logs
   logs.lwt
   str
   ppx_expect
 )
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_expect))
 (instrumentation (backend bisect_ppx))
)
