(library
 (name adapter)
 (public_name weevil.adapter)
 (libraries
   utils
   weevil_dapper.dapper
   weevil_dapper.defaults
   weevil_mdb.mdb ; MichEvent
   lwt
   lwt.unix
   conduit-lwt-unix
   data-encoding
   cmdliner
   logs
   logs.lwt
   str
   ppx_expect
 )
 (preprocess (pps lwt_ppx ppx_deriving.show ppx_expect))
 (instrumentation (backend bisect_ppx))
)
