(library
 (name backend)
 (libraries
     tezos-base
     tezos-base.unix
     tezos-micheline
     tezos-protocol-environment
     tezos-stdlib-unix
     tezos-protocol-014-PtKathma
     tezos-014-PtKathma-test-helpers
     dapper
     defaults
     lwt
     conduit-lwt-unix
     data-encoding
     cmdliner
     logs
     logs.lwt
     ppx_expect
     str)
 (flags
  (:standard
   -linkall
   -open
   Tezos_protocol_014_PtKathma
   -open
   Tezos_014_PtKathma_test_helpers
 ))
 (inline_tests (deps (glob_files data/*.json)))
  (preprocess (pps lwt_ppx ppx_deriving.show ppx_expect))
)
