(library
 (name mdb)
 (libraries
     tezos-base
     tezos-base.unix
     tezos-client-base-unix
     tezos-micheline
     tezos-protocol-environment
     tezos-stdlib-unix
     tezos-protocol-014-PtKathma
     tezos-014-PtKathma-test-helpers
     tezos-protocol-plugin-014-PtKathma
     tezos-rpc-http-client-unix
     dapper
     defaults
     utils
     lwt
     lwt.unix
     conduit-lwt-unix
     data-encoding
     cmdliner
     logs
     logs.lwt
     ppx_expect
     str)
 (flags
  (:standard
   -linkall
   -open
   Tezos_base.TzPervasives
   -open
   Tezos_protocol_014_PtKathma
   -open
   Tezos_014_PtKathma_test_helpers
 ))
 (preprocess (pps lwt_ppx ppx_deriving.show))
 (instrumentation (backend bisect_ppx))
)
