(library
 (name mdb)
 (virtual_modules mdb_stepper)
 (libraries
     tezos-base
     tezos-base.unix
     tezos-client-base-unix
     tezos-micheline
     tezos-protocol-environment
     tezos-stdlib-unix
     tezos-rpc-http-client-unix
     dapper
     lwt
     lwt.unix
     conduit-lwt-unix
     data-encoding
     cmdliner
     logs
     logs.lwt
     ppx_expect
     str)
 (flags
  (:standard
   -linkall
   -open
   Tezos_base.TzPervasives
 ))
 (preprocess (pps lwt_ppx ppx_deriving.show))
 (instrumentation (backend bisect_ppx))
)
