(library
 (name mdb_013)
 (implements mdb)
 (libraries
   tezos-base
   tezos-micheline
   tezos-protocol-013-PtJakart
   tezos-client-013-PtJakart
   tezos-protocol-plugin-013-PtJakart
   mdb
 )
 (private_modules
   mdb_import
   mdb_michelson
   mdb_stepper_config
   mdb_traced_interpreter
 )
 (flags
  (:standard
   -linkall
   -open
   Tezos_base.TzPervasives
 ))
)
