(library
 (name utils)
 (public_name weevil.utils)
 (libraries
     weevil_dapper.dapper
     weevil_dapper.defaults
     weevil_mdb.mdb
     tezos-micheline
     lwt
     lwt.unix
     conduit-lwt-unix
     data-encoding
     cmdliner
     logs
     logs.lwt
     str
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx))
)
