(library
 (name adapter_expect_tests)
 (libraries
   adapter
   dapper
   defaults
   mdb
   test_utils
   utils
   lwt
   lwt.unix
   conduit-lwt-unix
   data-encoding
   cmdliner
   logs
   logs.lwt
   ppx_expect
   str
 )
 (inline_tests)
 (preprocess (pps lwt_ppx ppx_expect))
 (flags
  (:standard
   -linkall
   -open
   Adapter
   ))
)
