(test
 (name adapter_tests)
 (libraries
   adapter
   weevil_dapper.dapper
   weevil_mdb.mdb_014
   weevil_dapper.defaults
   weevil_dapper.test_utils
   lwt
   lwt.unix
   conduit-lwt-unix
   data-encoding
   cmdliner
   logs
   logs.lwt
   str
   alcotest)
 (flags
  (:standard
   -linkall
   -open
   Adapter
   ))
)
