(library
 (name dap_expect_tests)
 (libraries
   dapper
   defaults
   mdb
   test_utils
   lwt
   lwt.unix
   data-encoding
   cmdliner
   logs
   logs.lwt
   ppx_expect
   str
 )
 (inline_tests (deps (glob_files data/*.json)))
 (preprocess (pps lwt_ppx ppx_expect))
 (flags
  (:standard
   -linkall
   -open
   Dapper
   ))
)
